syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "br.com.zup.edu";
option java_outer_classname = "KeyManagerGrpc";
option objc_class_prefix = "HLW";

package br.com.zup.edu;

service KeyManagerRegistraGrpcService {
  rpc cadastrar(RegistraChavePixRequest) returns (RegistraChavePixResponse) {}
}

service KeyManagerRemoveGrpcService {
  rpc remover(RemoveChavePixRequest) returns (RemoveChavePixResponse) {}
}

service KeyManagerBuscaGrpcService {
  rpc buscar(BuscaChavePixRequest) returns (BuscaChavePixResponse) {}
}

service KeyManagerListaGrpcService {
  rpc listar(ListarChavePixRequest) returns (ListarChavePixResponse) {}
}

enum TipoChave {
  UNKNOWN_TIPO_CHAVE = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}

enum TipoConta {
  UNKNOWN_TIPO_CONTA = 0;
  CONTA_POUPANCA = 1;
  CONTA_CORRENTE = 2;
}

message RegistraChavePixRequest {
  string idCliente = 1;
  string chave = 2;
  TipoChave tipo = 3;
  TipoConta tipoConta = 4;
}

message RegistraChavePixResponse {
  string idCliente = 1;
  string idPix = 2;
}
message RemoveChavePixRequest {
  string idPix = 1;
  string idCliente = 2;
}

message RemoveChavePixResponse {
  string chave = 1;
  string idCliente = 2;
}

message BuscaChavePixRequest {
  message FiltroPorChavePix {
    string idCliente = 1;
    string pixId = 2;
  }

  oneof Filtro {
    FiltroPorChavePix chavePix = 1;
    string chave = 2;
  }
}

message BuscaChavePixResponse {
  message ChavePix {
    message ContaInfo {
      TipoConta tipo        = 1;
      string instituicao    = 2;
      string nomeDoTitular  = 3;
      string cpfDoTitular   = 4;
      string agencia        = 5;
      string numeroDaConta  = 6;
    }

    TipoChave tipo = 1;
    string chave = 2;
    ContaInfo conta = 3;
    google.protobuf.Timestamp criadaEm = 4;
  }

  string idCliente = 1;
  string pixId = 2;
  ChavePix chave = 3;
}

message ListarChavePixRequest {
  string idCliente = 1;
}

message ListarChavePixResponse {

  message ChavePix {
    string pixId = 1;
    string idCliente = 2;
    TipoChave tipo = 3;
    string chave = 4;
    TipoConta tipoConta = 5;
    google.protobuf.Timestamp criadaEm = 6;
  }

  repeated ChavePix chaves = 1;
}